# pick_place_ws

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
src/cell_description/: CMakeLists.txt  package.xml
src/cell_description/config/: delta_robot_controllers.yaml
src/cell_description/launch/: gazebo_simulation.launch.py  moveit_demo.launch.py
src/cell_description/urdf/: conveyor_belt.urdf.xacro  delta_robot.gazebo.xacro  delta_robot.transmission.xacro  delta_robot.urdf.xacro  pick_place_cell.urdf.xacro  suction_gripper.urdf.xacro  two_finger_gripper.urdf.xacro
src/cell_description/worlds/: pick_place_world.world
src/cell_gui/: CMakeLists.txt  package.xml
src/cell_gui/include/cell_gui/: main_window.hpp
src/cell_gui/launch/: gui.launch.py
src/cell_gui/resources/: icons.qrc
src/cell_gui/src/: main.cpp  main_window.cpp
src/cell_gui/ui/: main_window.ui
src/pick_place_demo/: CMakeLists.txt  package.xml
src/pick_place_demo/config/: controllers.yaml  delta_robot.srdf  kinematics.yaml  moveit.rviz  ompl_planning.yaml
src/pick_place_demo/include/pick_place_demo/: control_node.hpp  vision_node.hpp
src/pick_place_demo/launch/: pick_place_demo.launch.py
src/pick_place_demo/src/: control_node.cpp  control_node_main.cpp  vision_node.cpp  vision_node_main.cpp
src/pick_place_demo/test/: test_control_node.cpp  test_control_node_states.cpp  test_vision_node.cpp
