<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cell_gui</name>
  <version>0.0.1</version>
  <description>Qt-based GUI for configuring and controlling the pick and place cell</description>
  <maintainer email="user@todo.todo">ROS User</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>qt_gui_cpp</depend>
  
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>cell_description</exec_depend>
  <exec_depend>pick_place_demo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
